version 0.2.6
Feat:
- Added request and response data to listings in openapi.yaml

Refactor:
- Changed the ID and definition title in listing.json
- Changed reference to the listing definition in validation.js
